--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="color/html2canvas.js"></script>
 	<script src="color/script.js"></script>
 
-
+	<link rel="icon" type="image/png" href="http://solitarydendrite.com/images/graphics/characters/circle.gif">
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="color/style.css" type="text/stylesheet" />
 </head>
