Change level system

--- a/Blekodu/index.html
+++ b/Blekodu/index.html
@@ -20,7 +20,7 @@
 
 	<div id="unsort" class='board'></div>
 	<div id="sort" class='board'></div>
-	<div id="win">Congrats!</br>You won.
+	<div id="win">
 		<div id="score">Score: </div>
 		<div id="ng_con" class='butt butt-con'>
 		<div id="ng" class="butt butt-mess">Next Level</div>
