--- a/Graduation/index.html
+++ b/Graduation/index.html
@@ -114,6 +114,7 @@
                     <span style="position:relative;">
                         <h3 style="text-align:center;">Place&nbsp<span class="glyphicon glyphicon-map-marker"></span></h3>
                     </span><br/>
+                    <p style="text-align:center">1148N 600W Switz City IN, 47465</p>    
                     <iframe frameborder="0" style="margin: 0 auto; display: block;" src="https://www.google.com/maps/embed/v1/place?q=1148N%20600%20W%20switz%20city%20IN%2047465&key=AIzaSyAKIcTwNqXkhNM9J9mkBxDieDo8mpl9ERg"></iframe>
                 </div>
             </div>
