--- a/color/page.html
+++ b/color/page.html
@@ -10,7 +10,7 @@
 
 
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="color/style.css" type="text/stylesheet" />
+	<link rel="stylesheet" href="style.css" type="text/stylesheet" />
 </head>
 <body>
 	<div id="mess">Click to stop. Hover to select from menu above.</div>
