--- a/Graduation/index.html
+++ b/Graduation/index.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 col-md-offset-3"><p>From stading in line for recess to finding the tangent line of a polynomial... <br/><br/> Come celebrate Vaughn's 18<sup>th</sup> birthday, and graduation from high school. Refreshments provided.</p><br/></div>
+                <div class="col-lg-6 col-md-offset-3"><p id="copy">From standing in line for recess to finding the tangent line of a polynomial... <br/><br/> Come celebrate Vaughn's 18<sup>th</sup> birthday, and graduation from high school. Refreshments provided.</p><br/></div>
             </div>
             <div class="row">
                 <div class="col-lg-6">
