--- a/color/index.html
+++ b/color/index.html
@@ -3,14 +3,14 @@
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="color/xcolor/jquery.xcolor.js"></script>
-	<script type="text/javascript" src="color/hover-intent.js"></script>
-	<script type="text/javascript" src="color/html2canvas.js"></script>
-	<script src="color/script.js"></script>
+	<script type="text/javascript" src="xcolor/jquery.xcolor.js"></script>
+	<script type="text/javascript" src="hover-intent.js"></script>
+	<script type="text/javascript" src="html2canvas.js"></script>
+	<script src="script.js"></script>
 
-	<link rel="icon" type="image/png" href="http://solitarydendrite.com/images/graphics/characters/circle.gif">
+
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="color/style.css" type="text/stylesheet" />
+	<link rel="stylesheet" href="style.css" type="text/stylesheet" />
 </head>
 <body>
 	<div id="mess">Click to stop. Hover to select from menu above.</div>
