--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <style>
 
+img {
+    width: 300px;
+    display: block;
+}
 body, h1, h2, h3, p {
   margin: 0;
   padding: 0;
