--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ input {
      <h1>Fatal Police Violence</h1>
      <p> For the past year I've been working with Martina Morris on analyzing data on fatal police violence. Despite the fact that over 300 people have been shot and killed by police since the beginning of 2019, there is no central repository or offical goverment reporting of police using fatal force. Despite this, communities have stepped forward to crowdsource data on police violence.</p>
 
-     <p> In the context of my research with Dr. Morris we've looked at four major there are 4 major datasets.</p>
+     <p> In the context of my research with Dr. Morris we've looked at four major there are 4 major datasets. I've included a static venn diagram of how the 4 datasets intersect.</p>
         <ul>
             <li>Fatal Encounters</li>
             <li>Killed By Police</li>
