--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ img {
     display: block;
 }
 body, h1, h2, h3, p {
-  margin: 0;
+  margin-top: 20px;
   padding: 0;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 1em;
